Fix paragraph styles being applied on smaller screens

--- a/style/scss/_thank-section.scss
+++ b/style/scss/_thank-section.scss
@@ -8,6 +8,10 @@
 
   @media only screen and (min-width: $laptop-size) {
     padding: 10.7rem 0;
+
+    p {
+      width: 860px;
+    }
   }
 
   img {
@@ -22,7 +26,7 @@
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 2.2rem;
-    width: 860px;
+    max-width: 620px;
 
     span{
       display: inline-block;
